raw/RAHMA EL RIYANTO CLARESTA 6433 245150201111034/2024-11-14-08-32-30.ceg/compilation.txt
NT.java:11: error: class LiveCodingMethod is public, should be declared in a file named LiveCodingMethod.java
public class LiveCodingMethod {
       ^
NT.java:38: error: cannot find symbol
        double[] angka = helpInput();
                         ^
  symbol:   method helpInput()
  location: class LiveCodingMethod
2 errors
Not compiled
